--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 cmake-build*
 .idea
 
+# exclude testing roms
+data/common/datadir/roms/gb/*.gb
+data/common/datadir/roms/gg/*.gg
+data/common/datadir/roms/megadrive/*.gen
+data/common/datadir/roms/nes/*.nes
+data/common/datadir/roms/sms/*.sms
+data/common/datadir/roms/snes/*.sfc
