gles2: fix xrgb texture format (add specific shader)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ set(PROJECT_AUTHOR "cpasjuste")
 ########################
 file(GLOB SOURCES
         src/*.c*
+        src/shaders/*.c*
         src/utility/*.c*
         src/libretro/*.c*
 )
