cmake: add install (wip)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,3 +49,9 @@ target_link_libraries(${CMAKE_PROJECT_NAME} cross2d ${LDFLAGS})
 # targets
 #####################
 include(libcross2d/cmake/targets.cmake)
+
+#####################
+# install
+#####################
+install(TARGETS ${CMAKE_PROJECT_NAME} DESTINATION bin)
+#install(DIRECTORY ${CMAKE_BINARY_DIR}/data_datadir )
